removed rcj-cms from docker for now + fixed minor docker-compose.yml issues

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
-    mongo:
-        image: mongo:7
+    mongodb:
+        image: mongo
         ports:
             - '27017:27017'
         container_name: competition-data
@@ -12,11 +12,10 @@ services:
         environment:
             - MONGO_INITDB_ROOT_USERNAME=CHANGEME
             - MONGO_INITDB_ROOT_PASSWORD=CHANGEME
-        image: mongo
-    rcj-cms:
-        ports:
+  #rcj-cms:
+    #ports:
             # - 80:80
             # - 443:443
-        environment:
-            - RCJ_CMS_ADMIN_USERNAME=CHANGEME
-            - RCJ_CMS_ADMIN_PASSWORD=CHANGEME
+    #environment:
+      #- RCJ_CMS_ADMIN_USERNAME=CHANGEME
+      #- RCJ_CMS_ADMIN_PASSWORD=CHANGEME
